Tray menu redesign